k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hmipmonitor
spec:
  selector:
    matchLabels:
      app: hmipmonitor
  template:
    metadata:
      labels:
        app: hmipmonitor
    spec:
      containers:
      - name: hmipmonitor
        image: ghcr.io/gabbersepp/hmipmonitor
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: diagnostics
          mountPath: /tmp
      - name: monitor-sidecar
        image: mcr.microsoft.com/dotnet/monitor
        ports:
        - containerPort: 52323
        #args: [ "--no-auth" ]
        volumeMounts:
        - name: diagnostics
          mountPath: /tmp
      imagePullSecrets:
      - name: ghcrio
      volumes:
      - name: diagnostics
        emptyDir: {}
