k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmipmonitor-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range:  192.168.2.0/24
    #nginx.ingress.kubernetes.io/upstream-vhost: "192.168.2.126" # ip of node :-(
spec:
  rules:
  - host: hmip.h5b.de
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hmipmonitor-service
            port:
              number: 80
  - host: www.hmip.h5b.de
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hmipmonitor-service
            port:
              number: 80
